:horse: Fixed Day 9. Added rotate function to circularlist.